--- a/project_test_frontend/README
+++ b/project_test_frontend/README
@@ -15,3 +15,5 @@
 # the first step was to create the first templet and imported in the odoo server at the login
 # so now we will fill exemple.xml and exemple.js
 
+#for going deeper in OWL there is a documentation in odoo github: https://github.com/odoo/owl/tree/master
+# for the t tag there is a documentation in odoo github: https://github.com/odoo/owl/blob/master/doc/reference/templates.md
